cluster/gitops/monitoring/victoria-metrics/license-service/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: victoria-metrics-license-service
specs:
  - description: victoria-metrics-license-service
    endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: victoria-metrics-license-service
        app.kubernetes.io/name: victoria-metrics-license-service
    egress:
      - {}
    ingress:
      # kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: https
                protocol: TCP
              - port: metrics
                protocol: TCP
      # License checks
      - fromEndpoints:
          - matchLabels:
              app.kubernetes.io/instance: victoria-metrics-k8s-stack
          - matchLabels:
              app.kubernetes.io/instance: victoria-metrics-anomaly
          # TODO migrate existing components to this label
          - matchLabels:
              endpoints.netpols.home.arpa/victoriametrics-enterprise-component: "true"
        toPorts:
          - ports:
              - port: https
                protocol: TCP
      # Metrics
      - fromEndpoints:
          - matchLabels:
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: metrics
                protocol: TCP
